@@ -1,3 +1,8 @@
+2010-06-01  Roland McGrath  <roland@redhat.com>
+
+	* readelf.c (print_debug): Don't bail if libdw setup fails.
+	Suppress complaint if we only want .eh_frame anyway.
+
 2010-05-28  Ulrich Drepper  <drepper@redhat.com>
 
 	* readelf.c (attr_callback): Also print form information.
